<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/item_margin"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:src = "@drawable/icons8_close_24"
        android:contentDescription="@string/action_back"
        android:background="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/short_place">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:layout_marginTop="@dimen/short_place"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintDimensionRatio="1:1"/>

        <TextView
            android:id="@+id/photo_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/empty_photo"
            app:layout_constraintLeft_toLeftOf="@id/product_image"
            app:layout_constraintRight_toRightOf="@id/product_image"
            app:layout_constraintTop_toTopOf="@id/product_image"
            app:layout_constraintBottom_toBottomOf="@id/product_image"/>

        <!--android:background="@drawable/border"-->

        <!--<ImageButton-->
            <!--android:id="@+id/like_view"-->
            <!--android:layout_width="@dimen/like_size"-->
            <!--android:layout_height="@dimen/like_size"-->
            <!--android:background="@color/transparent"-->
            <!--android:scaleType="fitCenter"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:layout_marginRight="@dimen/like_margin"-->
            <!--android:layout_marginEnd="@dimen/like_margin"-->
            <!--android:layout_marginBottom="@dimen/like_margin"-->
            <!--android:src="@drawable/icons8_like_50"-->
            <!--android:contentDescription="@string/like"-->
            <!--app:layout_constraintBottom_toBottomOf="@id/product_image"-->
            <!--app:layout_constraintRight_toRightOf="@id/product_image"/>-->

        <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/product_image"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/short_place"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/product_title"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/short_place"
            app:layout_constraintTop_toBottomOf="@id/category"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/short_place"
            app:layout_constraintTop_toBottomOf="@id/description"/>

        <TextView
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/short_place"
            app:layout_constraintTop_toBottomOf="@id/price"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/short_place"
            app:layout_constraintTop_toBottomOf="@id/mobile"/>

    </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>
